apps/syncthing/prod/syncthing/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: syncthing
  namespace: syncthing
spec:
  template:
    spec:
      containers:
      - name: syncthing
        resources:
          limits:
            memory: 1Gi
            cpu: 1000m
          requests:
            memory: 512Mi
            cpu: 250m
